# project-migration-tool

./: APPLICATION-LAYOUT.md  ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD-PAGE.md  Empty-States-and-Onboarding-Moments.md  Final-Polish-Breadcrumbs-Animations-Dark-Mode-Accessibility.md  INSTRUCTIONS.MD  Implementation-Blueprint-React-plus-Tailwind-Architecture.md  Job Details Page (Progress, Stats, Logs).md  Jobs-List-Page-Active-Jobs-plus-History.md  Makefile  Migration-and-Rollback-Forms-Professional-UI.md  PROJECT-MIGRATE-DESIGN-SYSTEM.md  README.md  ROADMAP.md  Rollback-Danger Zone-UX.md  Tiltfile  Toast-Notifications-and-Feedback-System.md  create_project_migrate_frontend_structure.sh  makefile
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Old_frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.mts
Old_frontend/layout/: AppLayout.tsx  Button.tsx  Card.tsx  Input.tsx  Sample-Page-Migration-And-Rollback-Page.Tsx  SidebarItem.tsx  (+1 more)
backend/: Dockerfile  pyproject.toml
backend/data/: jobs.db
backend/project_migrate/: __init__.py  db.py
backend/project_migrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/project_migrate/api/: __init__.py  app.py  jobs.py  logging_stream.py  schemas.py
backend/project_migrate/cli/: __init__.py  main.py
backend/project_migrate/engine/: __init__.py  diff.py  ignores.py  logging_config.py  manifest.py  migrator.py  parallel.py  rollback.py
backend/tests/: npm run dev  test_manifest_and_migration.py  test_rollback.py
scripts/: add_copyright.py
(+90 files in other folders)
